// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionDetail > should always render as desktop is useDesktop is set lg 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should always render as desktop is useDesktop is set md 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should always render as desktop is useDesktop is set sm 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should always render as desktop is useDesktop is set xl 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should always render as desktop is useDesktop is set xs 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render in lg desktop screen 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render in md desktop screen 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render in sm mobile screen 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between space-x-4 w-full md:items-center items-top"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 md:theme-text dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Test
      </div>
      <div
        class="flex justify-end items-center space-x-4 min-w-0 grow"
      >
        <div
          class="flex justify-end w-full text-theme-secondary-700 md:theme-text dark:text-theme-secondary-500"
        >
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render in xl desktop screen 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render in xs mobile screen 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex justify-between space-x-4 w-full md:items-center items-top"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 md:theme-text dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Test
      </div>
      <div
        class="flex justify-end items-center space-x-4 min-w-0 grow"
      >
        <div
          class="flex justify-end w-full text-theme-secondary-700 md:theme-text dark:text-theme-secondary-500"
        >
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render with bottom border 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-b border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render with extra children 1`] = `
<div>
  <div
    class="flex items-center py-0 space-x-4 border-t border-dashed border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
    <div
      data-testid="TEST_CHILD"
    />
  </div>
</div>
`;

exports[`TransactionDetail > should render with top border 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render without border 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail > should render without padding 1`] = `
<div>
  <div
    class="flex items-center py-0 space-x-4 border-t border-dashed border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;
